--- a/EMTTRACKER/Views/Login/Index.cshtml
+++ b/EMTTRACKER/Views/Login/Index.cshtml
@@ -1,13 +1,34 @@
-﻿<h1>Inicio de sesión</h1>
-<p>
-    <span class="text-primary">Bienvenido</span> a EMTTracker. 
-    Por favor, introduce tus credenciales
-</p>
+﻿@{
+    Layout = null;
+}
 
-<form method="post">
-    <label>Correo electrónico: </label><br />
-    <input class="form-control" type="email" name="email" /><br />
-    <label>Contraseña: </label><br />
-    <input class="form-control" type="password" name="passwd" /><br />
-    <button class="btn btn-primary">Iniciar sesión</button>
-</form>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login - EMTTracker</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/login.css" />
+</head>
+<body>
+    <div class="login-page-wrapper">
+        <div class="login-container">
+            <h1>Inicio de sesión</h1>
+            <p>
+                <span class="text-primary">Bienvenido a EMTTracker.</span>
+                Por favor, introduce tus credenciales
+            </p>
+
+            <form method="post">
+                <label>Correo electrónico: </label><br />
+                <input class="form-control" type="email" name="email" /><br />
+                <label>Contraseña: </label><br />
+                <input class="form-control" type="password" name="password" /><br />
+                <p class="text-danger">@ViewData["MENSAJE"]</p>
+                <button class="btn btn-primary">Iniciar sesión</button>
+            </form>
+        </div>
+    </div>
+</body>
+</html>
