Menu principal de la pagina terminado, layout de cada tipo de transporte cambiado a su respectivo color

--- a/EMTTRACKER/Views/Login/Index.cshtml
+++ b/EMTTRACKER/Views/Login/Index.cshtml
@@ -16,8 +16,8 @@
         <div class="login-container">
             <h1>Inicio de sesión</h1>
             <p>
-                <span class="text-primary">Bienvenido a EMTTracker.</span>
-                Por favor, introduce tus credenciales
+                Inicia sesión para ver
+                <span class="text-primary fw-bold">tus paradas Favoritas.</span>
             </p>
 
             <form method="post">
