estilos mejorados en las busquedas

--- a/EMTTRACKER/Views/Interurbano/Index.cshtml
+++ b/EMTTRACKER/Views/Interurbano/Index.cshtml
@@ -1,4 +1,22 @@
 ﻿@{
     ViewData["COLORLAYOUT"] = "#23cf2f";
+    ViewData["CONTROLLER"] = ViewContext.RouteData.Values["Controller"]?.ToString();
 }
-<h2>Buscador de buses <span style="color: limegreen">Interurbanos</span></h2>
+
+
+<div class="p-4 border-bottom border-1 border-success d-flex w-100 align-items-center" style="border-color: limegreen">
+
+    <div>
+        <h2 class="mb-0">Buscador de buses <span style="color: limegreen">Interurbanos</span></h2>
+    </div>
+
+    <div class="ms-auto">
+        <form method="post" class="d-flex gap-2">
+            <input class="form-control" name="codigo" type="text" placeholder="Código de parada" />
+            <button class="btn text-light" style="background-color: limegreen">
+                Buscar
+            </button>
+        </form>
+    </div>
+
+</div>
