--- a/EMTTRACKER/Views/Cercanias/Index.cshtml
+++ b/EMTTRACKER/Views/Cercanias/Index.cshtml
@@ -1,5 +1,21 @@
 ﻿@{
     ViewData["COLORLAYOUT"] = "#cf3123";
+    ViewData["CONTROLLER"] = ViewContext.RouteData.Values["Controller"]?.ToString();
 }
 
-<h2>Buscador de <span style="color: #cf3123">Cercanias renfe</span></h2>
+<div class="p-4 border-bottom border-1 border-danger d-flex w-100 align-items-center">
+
+    <div>
+        <h2 class="mb-0">Buscador de <span style="color: #cf3123">Cercanias renfe</span></h2>
+    </div>
+
+    <div class="ms-auto">
+        <form method="post" class="d-flex gap-2">
+            <input class="form-control" name="codigo" type="text" placeholder="Código de parada" />
+            <button class="btn text-light" style="background-color: #cf3123">
+                Buscar
+            </button>
+        </form>
+    </div>
+
+</div>
