Vista de detalles de una parada con los buses y sus horarios proximos terminada. Añadidos al diseño para mejorar accesibilidad y navegación

--- a/EMTTRACKER/Views/Emt/Index.cshtml
+++ b/EMTTRACKER/Views/Emt/Index.cshtml
@@ -23,30 +23,34 @@
 
 @if (paradaBuscada != null)
 {
-    <div class="w-100 border-bottom border-1 border-primary p-3 d-flex align-items-center gap-3">
-        <img src="~/images/bus_azul.png" width="30" height="30"/> 
-        <h6 class="mb-0"><span class="fw-bold">#@paradaBuscada.Codigo</span> | @paradaBuscada.Nombre</h6>
-        <div class="d-flex gap-2 ms-auto flex-wrap">
-            @foreach (Linea linea in paradaBuscada.Lineas)
-            {
-                <div class="badge bg-primary text-light">@linea.Codigo</div>
-            }
-        </div>
-    </div>
-}
-else if (Model != null)
-{
-    @foreach (VParadaUrbana parada in Model)
-    {
+    <a asp-controller="Emt" asp-action="Horas" asp-route-codigo="@paradaBuscada.Codigo">
         <div class="w-100 border-bottom border-1 border-primary p-3 d-flex align-items-center gap-3">
             <img src="~/images/bus_azul.png" width="30" height="30"/> 
-            <h6 class="mb-0"><span class="fw-bold">#@parada.Codigo</span> | @parada.Nombre</h6>
+            <h6 class="mb-0"><span class="fw-bold">#@paradaBuscada.Codigo</span> | @paradaBuscada.Nombre</h6>
             <div class="d-flex gap-2 ms-auto flex-wrap">
-                @foreach (Linea linea in parada.Lineas)
+                @foreach (Linea linea in paradaBuscada.Lineas)
                 {
                     <div class="badge bg-primary text-light">@linea.Codigo</div>
                 }
             </div>
         </div>
+    </a>
+}
+else if (Model != null)
+{
+    @foreach (VParadaUrbana parada in Model)
+    {
+        <a asp-controller="Emt" asp-action="Horas" asp-route-codigo="@parada.Codigo">
+            <div class="w-100 border-bottom border-1 border-primary p-3 d-flex align-items-center gap-3">
+                <img src="~/images/bus_azul.png" width="30" height="30"/> 
+                <h6 class="mb-0"><span class="fw-bold">#@parada.Codigo</span> | @parada.Nombre</h6>
+                <div class="d-flex gap-2 ms-auto flex-wrap">
+                    @foreach (Linea linea in parada.Lineas)
+                    {
+                        <div class="badge bg-primary text-light">@linea.Codigo</div>
+                    }
+                </div>
+            </div>
+        </a>
     }
 }
