--- a/EMTTRACKER/wwwroot/css/layout.css
+++ b/EMTTRACKER/wwwroot/css/layout.css
@@ -1,3 +1,13 @@
+/* General Layout Styles */
+html {
+    position: relative;
+    min-height: 100%;
+}
+
+body {
+    margin-bottom: 80px; /* Altura aproximada del footer */
+}
+
 /* Header Styles */
 header {
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -68,8 +78,10 @@ header .nav-icon-label {
 
 /* Footer Styles */
 footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
     padding: 20px 0;
-    margin-top: 40px;
     box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
 }
 
