--- a/EMTTRACKER/Views/Emt/Index.cshtml
+++ b/EMTTRACKER/Views/Emt/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     ViewData["COLORLAYOUT"] = "#2a5298";
     ViewData["CONTROLLER"] = ViewContext.RouteData.Values["Controller"]?.ToString();
+    List<VParadaUrbana> paradasFavoritas = ViewData["FAVORITAS"] as List<VParadaUrbana>;
     VParadaUrbana paradaBuscada = ViewData["PARADABUSCADA"] as VParadaUrbana;
     
 }
@@ -36,13 +37,30 @@
         </div>
     </a>
 }
-else if (Model != null)
+else if (paradasFavoritas != null)
+{
+    @foreach (VParadaUrbana parada in paradasFavoritas)
+    {
+        <a asp-controller="Emt" asp-action="Horas" asp-route-codigo="@parada.Codigo">
+            <div class="w-100 border-bottom border-1 border-primary p-3 d-flex align-items-center gap-3">
+                <img src="~/images/bus_azul.png" width="30" height="30"/> 
+                <h6 class="mb-0"><span class="fw-bold">#@parada.Codigo</span> | @parada.Nombre</h6>
+                <div class="d-flex gap-2 ms-auto flex-wrap">
+                    @foreach (Linea linea in parada.Lineas)
+                    {
+                        <div class="badge bg-primary text-light">@linea.Codigo</div>
+                    }
+                </div>
+            </div>
+        </a>
+    }
+} else if(Model != null && paradasFavoritas == null)
 {
     @foreach (VParadaUrbana parada in Model)
     {
         <a asp-controller="Emt" asp-action="Horas" asp-route-codigo="@parada.Codigo">
             <div class="w-100 border-bottom border-1 border-primary p-3 d-flex align-items-center gap-3">
-                <img src="~/images/bus_azul.png" width="30" height="30"/> 
+                <img src="~/images/bus_azul.png" width="30" height="30" />
                 <h6 class="mb-0"><span class="fw-bold">#@parada.Codigo</span> | @parada.Nombre</h6>
                 <div class="d-flex gap-2 ms-auto flex-wrap">
                     @foreach (Linea linea in parada.Lineas)
