Todo el funcionamiento de los buses interurbanos hecho

--- a/EMTTRACKER/Views/Shared/_Layout.cshtml
+++ b/EMTTRACKER/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="@controller" asp-action="GetFavoritasEmt">
+                            <a class="nav-link text-light" asp-area="" asp-controller="@controller" asp-action="GetFavoritas">
                                 <div class="nav-icon-container">
                                     <img src="~/images/favorito_fill.png" alt="Favoritos"/>
                                     <span class="nav-icon-label">Favoritos</span>
