--- a/EMTTRACKER/Views/Interurbano/Index.cshtml
+++ b/EMTTRACKER/Views/Interurbano/Index.cshtml
@@ -1,6 +1,9 @@
-﻿@{
+﻿@model List<VParadaInterurbana>
+@{
     ViewData["COLORLAYOUT"] = "#23cf2f";
     ViewData["CONTROLLER"] = ViewContext.RouteData.Values["Controller"]?.ToString();
+    List<VParadaInterurbana> paradasFavoritas = ViewData["FAVORITAS"] as List<VParadaInterurbana>;
+    VParadaInterurbana paradaBuscada = ViewData["PARADABUSCADA"] as VParadaInterurbana;
 }
 
 
@@ -20,3 +23,55 @@
     </div>
 
 </div>
+
+@if (paradaBuscada != null)
+{
+    <a asp-controller="Interurbano" asp-action="Horas" asp-route-codigo="@paradaBuscada.Codigo">
+        <div class="w-100 border-bottom border-1 border-success p-3 d-flex align-items-center gap-3">
+            <img src="~/images/interurbano.png" width="50" height="30"/> 
+            <h6 class="mb-0"><span class="fw-bold">#@paradaBuscada.Codigo</span> | @paradaBuscada.Nombre</h6>
+            <div class="d-flex gap-2 ms-auto flex-wrap">
+                @foreach (Linea linea in paradaBuscada.Lineas)
+                {
+                    <div class="badge bg-success text-light">@linea.Codigo</div>
+                }
+            </div>
+        </div>
+    </a>
+}
+else if (paradasFavoritas != null)
+{
+    @foreach (VParadaInterurbana parada in paradasFavoritas)
+    {
+        <a asp-controller="Interurbano" asp-action="Horas" asp-route-codigo="@parada.Codigo">
+            <div class="w-100 border-bottom border-1 border-success p-3 d-flex align-items-center gap-3">
+                <img src="~/images/interurbano.png" width="50" height="30" />
+                <h6 class="mb-0"><span class="fw-bold">#@parada.Codigo</span> | @parada.Nombre</h6>
+                <div class="d-flex gap-2 ms-auto flex-wrap">
+                    @foreach (Linea linea in parada.Lineas)
+                    {
+                        <div class="badge bg-success text-light">@linea.Codigo</div>
+                    }
+                </div>
+            </div>
+        </a>
+    }
+}
+else if (Model != null)
+{
+    @foreach (VParadaInterurbana parada in Model)
+    {
+        <a asp-controller="Interurbano" asp-action="Horas" asp-route-codigo="@parada.Codigo">
+            <div class="w-100 border-bottom border-1 border-success p-3 d-flex align-items-center gap-3">
+                <img src="~/images/interurbano.png" width="50" height="30" />
+                <h6 class="mb-0"><span class="fw-bold">#@parada.Codigo</span> | @parada.Nombre</h6>
+                <div class="d-flex gap-2 ms-auto flex-wrap">
+                    @foreach (Linea linea in parada.Lineas)
+                    {
+                        <div class="badge bg-success text-light">@linea.Codigo</div>
+                    }
+                </div>
+            </div>
+        </a>
+    }
+}
